fixed overflow bug in cart

--- a/src/assets/sass/components/_cart.scss
+++ b/src/assets/sass/components/_cart.scss
@@ -1,6 +1,8 @@
 .cart {
   &-body {
     flex: 1;
+    padding-bottom: 1rem;
+    overflow-y: auto;
   }
 
   &-card {
